mType/tests/testFiles/import/pass/importIntPrimitive.mt
// Test: Import Int from lib/primitives

import { Int } from "../../lib/primitives/Int.mt";

Int num = 42;
print(num.toString());
