mType/tests/testFiles/import/error/library/importLibMissingSemicolon.mt
// Test: import lib without semicolon should error
import lib "SomeLib"

print("Should not reach here");
